# SPBU-testworks

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  appveyor.yml  init_gtest.cpp
source/FinalTest/: README.md
source/FinalTest/Task01/: CMakeLists.txt  task-01.cpp  task-01.h  utest-task-01.cpp
source/FinalTest/Task02/: CMakeLists.txt  InsertionSort.cpp  InsertionSort.h  List.cpp  List.h  data.txt  task-02-2.cpp  task-02-2.h  task-02.cpp  task-02.h  utest-task-02-2.cpp  utest-task-02.cpp
source/FinalTest/Task03/: CMakeLists.txt  DepthFirstSearch.cpp  DepthFirstSearch.h  Graph.cpp  Graph.h  GraphBuildFromFile.cpp  GraphBuildFromFile.h  GraphUsingVectors.cpp  GraphUsingVectors.h  RobotGraphTraversal.cpp  RobotGraphTraversal.h  data.txt  task-03-2.cpp  task-03-2.h  task-03.cpp  task-03.h  utest-task-03-2.cpp  utest-task-03.cpp
source/FinalTest/Task03/Graph/: depthFirstSearch.cpp  depthFirstSearch.h  graph.cpp  graph.h
source/Sem02Test01/Sem02Test01/: Description.md  Sem02Test01.sln
source/Sem02Test01/Sem02Test01/Sem02Test01/: DummyPriorityQueue{T}.cs  EmptyQueueException.cs  IPriorityQueue{T}.cs  LinkedPriorityQueue{T}.cs  Sem02Test01.csproj
source/Sem02Test01/Sem02Test01/Sem02Test01.Tests/: PriorityQueueTests.cs  Sem02Test01.Tests.csproj
source/Sem02Test02/: Description.md
source/Sem02Test02-retake/: Description.md
source/Sem02Test02-retake/Test-02-retake/: BubbleSort.cs  EvenOddDigitComparer.cs  StringComparerByLength.cs  Test-02-retake.csproj  Test-02-retake.sln
source/Sem02Test02-retake/Test-02-retake.Tests/: BubbleSortTests.cs  Test-02-retake.Tests.csproj  packages.config
source/Sem02Test02-retake/Test-02-retake.Tests/Properties/: AssemblyInfo.cs
source/Sem02Test02-retake/Test-02-retake/Properties/: AssemblyInfo.cs
source/Sem02Test02/Sem02Test02/: CustomSortedSet.cs  ListComparer.cs  Sem02Test02.csproj  Sem02Test02.sln  SetOfWordsHandler.cs  SimpleClass.cs  packages.config
source/Sem02Test02/Sem02Test02.Tests/: CustomSetTests.cs  Sem02Test02.Tests.csproj  UnitTest1.cs  packages.config
source/Sem02Test02/Sem02Test02.Tests/Properties/: AssemblyInfo.cs
source/Sem02Test02/Sem02Test02/Properties/: AssemblyInfo.cs
